--- a/.gitattributes
+++ b/.gitattributes
@@ -1,19 +1,19 @@
-//Thêm thý vi?n LiquitCrystal
+//Them thu vien LiquitCrystal
 #include <LiquidCrystal.h>
  
-//Kh?i t?o v?i các chân
+//Khoi tao voi cac chan
 LiquidCrystal lcd(12, 11, 5, 4, 3, 2);
  
 void setup() {
-  //Thông báo ðây là LCD 1602
+  //Thong bao day la LCD 1602
   lcd.begin(16, 2);
-  //In ra màn h?nh lcd d?ng ch? Toi yeu Arduino
+  //In ra man hinh lcd dong chu Toi yeu Arduino
   lcd.print("Toi yeu Arduino!");
 }
  
 void loop() {
-  // ð?t con tr? vào c?t 0, d?ng 1
-  // Lýu ?: d?ng 1 là d?ng th? 2, l?ng 0 là d?ng th? 1. Nôm na, nó ð?m t? 0 t? không ph?i t? 1
+  // dat con tro vao cot 0, dong 1
+  // Luu : dong 1 là dong thu 2, dong 0 là dong thu 1. 
   lcd.setCursor(0, 1);
   // In ra dong chu
   lcd.print("   Arduino.VN");
